<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="0dip"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerHorizontal="true"
    android:id="@+id/holder"
    >
  <android.support.v7.widget.Toolbar
      android:id="@+id/my_toolbar"
      android:layout_width="match_parent"
      android:layout_height="?attr/actionBarSize"
      app:theme="@style/ToolBarStyle"

      />

  <fragment
      xmlns:tools="http://schemas.android.com/tools"
      android:id="@+id/map"
      android:name="com.google.android.gms.maps.SupportMapFragment"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      tools:context=".main.MapsMainActivity"
      android:layout_below="@id/my_toolbar"
      android:layout_marginLeft="5dp"
      android:layout_marginRight="5dp"
      android:layout_marginTop="5dp"
      android:layout_marginBottom="150dp"
      />
  <TextView
      android:id="@+id/textView5"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignLeft="@+id/map"
      android:layout_alignParentBottom="true"
      android:layout_alignStart="@+id/map"
      android:layout_marginBottom="106dp"
      android:layout_marginLeft="35dp"
      android:layout_marginStart="35dp"
      android:text="@string/regular87"
      style="@style/TextAppearance.AppCompat.Medium"
      />
  <TextView
      android:id="@+id/textView6"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignEnd="@+id/map"
      android:layout_alignRight="@+id/map"
      android:layout_alignTop="@+id/textView5"
      android:layout_marginEnd="35dp"
      android:layout_marginRight="35dp"
      android:text="@string/premium91"
      style="@style/TextAppearance.AppCompat.Medium"
      />
  <TextView
      android:id="@+id/textView7"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignLeft="@+id/textView5"
      android:layout_alignStart="@+id/textView5"
      android:layout_below="@+id/textView6"
      android:layout_marginTop="10dp"
      android:layout_marginStart="15dp"
      android:layout_marginLeft="15dp"
      android:text="$2.40"
      style="@style/TextAppearance.AppCompat.Headline"
      />
  <TextView
      android:id="@+id/textView8"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignLeft="@+id/textView6"
      android:layout_alignStart="@+id/textView6"
      android:layout_alignTop="@+id/textView7"
      android:text="$2.80"
      android:layout_marginStart="15dp"
      android:layout_marginLeft="15dp"
      style="@style/TextAppearance.AppCompat.Headline"
      />
  <Button
      android:id="@+id/btnNext"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_alignParentBottom="true"
      android:layout_centerHorizontal="true"
      android:text="@string/next"
      style="@style/Base.Widget.AppCompat.Button.Colored"
      />
  <TextView
      android:id="@+id/textView9"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignLeft="@+id/map"
      android:layout_alignStart="@+id/map"
      android:layout_alignTop="@+id/map"
      android:layout_marginLeft="18dp"
      android:layout_marginStart="18dp"
      android:layout_marginTop="13dp"
      android:text="@string/order_a_boost"
      style="@style/TextAppearance.AppCompat.Inverse"
      />
  <TextView
      android:id="@+id/textView10"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignLeft="@+id/textView9"
      android:layout_alignStart="@+id/textView9"
      android:layout_below="@+id/textView9"
      android:layout_marginTop="1dp"
      android:text="@string/zoom_and_pin"
      style="@style/TextAppearance.AppCompat.Inverse"
      />


</RelativeLayout>
